--- a/src/AppBundle/Resources/config/doctrine/Empresa.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Empresa.orm.yml
@@ -54,8 +54,8 @@ AppBundle\Entity\Empresa:
             inversedBy: null
             joinTable: null
             orderBy: null
-        fosUser:
-            targetEntity: FosUser
+        user:
+            targetEntity: User
             cascade: {  }
             mappedBy: empresa
             inversedBy: null
