--- a/composer.json
+++ b/composer.json
@@ -22,10 +22,11 @@
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "~2.0",
         "friendsofsymfony/user-bundle": "~1.3",
-        "twbs/bootstrap": "^3.3"
+        "twbs/bootstrap": "^3.3",
+        "javiereguiluz/easyadmin-bundle": "^1.11"
     },
     "require-dev": {
-        "sensio/generator-bundle": "~3.0",
+        "sensio/generator-bundle": "~2.3",
         "symfony/phpunit-bridge": "~2.7"
     },
     "scripts": {
